# better-wind

./: .gitignore  CLAUD.md  LICENSE  Makefile  README.md  pyproject.toml
config/airports/: KBOI.yaml  KMAN.yaml  KSUN.yaml
notebooks/: 01_data_eda.ipynb
src/wind_forecast/: __init__.py  cli.py  config.py  logging_setup.py  winds.py
src/wind_forecast/eval/: __init__.py  baselines.py  harness.py  io.py  metrics.py
src/wind_forecast/ingest/: __init__.py  hrrr.py  metar.py
tests/: test_config.py  test_eval_baselines.py  test_eval_harness.py  test_eval_io.py  test_eval_metrics.py  test_hrrr_ingest.py  test_logging_setup.py  test_metar_ingest.py  test_winds.py
