[project]
name = "wind-forecast"
version = "0.1.0"
description = "Site-specific probabilistic wind forecasting that learns HRRR residual bias patterns per airport."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "polars>=0.20",
    "xarray>=2024.1",
    "cfgrib>=0.9.10",
    "herbie-data>=2024.2",
    "properscoring>=0.1",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "requests>=2.31",
    "click>=8.1",
    "joblib>=1.3",
    "ngboost>=0.5",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.scripts]
wind-forecast = "wind_forecast.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wind_forecast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["herbie.*", "cfgrib.*", "properscoring.*", "ngboost.*", "lightgbm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
